# SC4PS

./: .gitignore  machine_setup.md
hw01/: machine_setup.md
hw02/: .arrayoperation.c.swp  a.out  arrayproduct.c
hw03/: matrixproduct.c
hw04/: answers.md
hw04/fft_example/: CMakeLists.txt  README.md
hw04/fft_example/include/: fft_utils.h
hw04/fft_example/pyplotting/: plot_fft.py
hw04/fft_example/src/: fft_example.c  fft_utils.c
hw05/: README.md  legendre_x.txt  legendrestability.c  pyplotting.py
hw06/: README.md  params.txt  product_htf5  product_htf5.c
hw07/: README.md  plottests.py  randomtests.c
